# sofa

./: .gitignore  CMakeLists.txt
SofaGui/: CMakeLists.txt
SofaKernel/framework/sofa/core/loader/: MeshLoader.h
SofaKernel/framework/sofa/helper/gl/: Texture.cpp
SofaKernel/modules/SofaBaseVisual/: BaseCamera.cpp  InteractiveCamera.cpp  VisualModelImpl.cpp  VisualModelImpl.h
applications/SurfLab-TIPS/: CMakeLists.txt  SurfLab-TIPS.cpp  Visualizer.cpp  Visualizer.hpp
applications/SurfLabTIPS/: CMakeLists.txt  SurfLabTIPS.cpp  Visualizer.cpp  Visualizer.hpp  resources.qrc
applications/plugins/: CMakeLists.txt
applications/plugins/AAOmni/: AAOmniDefs.h  AAOmniDevice.cpp  AAOmniDevice.h  AAOmniDriver.cpp  AAOmniDriver.h  CMakeLists.txt  Matrix.cpp  Matrix.h  hduVector.h  initAAOmni.cpp  readme.txt
applications/plugins/SaLua/: LuaBindings.cpp
applications/plugins/Sensable/: CMakeLists.txt  EnslavementForceFeedback.cpp  NewOmniDriver.cpp  NewOmniDriver.h  OmniDriver.cpp
applications/plugins/Sensable/examples/: CameraAlignment.scn  Carving.scn  Deformable-Method1.scn  SimpleBox-DistanceGrid.scn  SimpleBox-Method2.scn  SimpleBox-TriangleModel.scn  SimpleBoxLarge.scn  SimpleTooth-DistanceGrid.scn  SimpleTooth-TriangleModel.scn  SpecifyingCamera.scn  TwoTeeth-DistanceGrid.scn  TwoTeeth-TriangleModel.scn
applications/plugins/Sensable/examples/Dentistry/: dentalSurgery_06.scn  dentalSurgery_07.scn  dentalSurgery_08.scn
applications/plugins/Sensable/examples/Old Examples/: omni-probing-liver.scn
applications/plugins/SofaPython/: Binding_Node.cpp  Binding_PythonScriptController.cpp  PythonMainScriptController.cpp  PythonMainScriptController.h  PythonScriptController.cpp  PythonScriptController.h  ScriptController.cpp  ScriptController.h
applications/plugins/SofaSimpleGUI/: CMakeLists.txt
applications/plugins/SofaSuturing/: HapticManager.cpp  HapticManager.h
applications/plugins/SurfLabConnectingTissue/: ConnectingTissue.cpp  ConnectingTissue.h
applications/plugins/SurfLabConnectingTissue/examples/: connectingTissue.scn
applications/plugins/SurfLabHaptic/: CMakeLists.txt  GraspingForceFeedback.h  HapticManager.cpp  HapticManager.h
applications/plugins/SurfLabHexahedralIGA/: CMakeLists.txt  QuarterEdge.hpp  QuarterEdgeTest.cpp  SurfLabHexahedralIGA.c  TriCubicBezierMeshTopology.cpp  TriCubicBezierMeshTopology.h  TricubicBezierForceField.cpp  TricubicBezierMeshTopology.h  TricubicBezierSetTopologyContainer.cpp  TricubicHexahedralCorotationalFEMForceField.cpp  TrilinearFEMForceField.cpp  TrilinearHexahedralCorotationalFEMForceField.cpp  box-cubic.lua  box-cubic.scn  box-trilinear.xml  box.scn  box.scn.qglviewer.view  grid-cubic.scn  test.scn  test.scn.qglviewer.view
applications/plugins/SurfLabSpeechRecognition/: CMakeLists.txt  SpeechToText.cpp  SpeechToText.h  initSurfLabSpeechRecognition.cpp  initSurfLabSpeechRecognition.h
applications/plugins/SurfLabSpeechRecognition/model/en-us/: laparoscopicCamera.dict
applications/plugins/SurfLabSplineSurface/: BiCubicSplineSurface.cpp  CMakeLists.txt  SurfLabSplineSurface.c
applications/plugins/SurfLabSplineSurface/examples/: box.scn  test.scn  test.scn.qglviewer.view
applications/projects/: CMakeLists.txt
applications/projects/qtSofa/: CMakeLists.txt  QSofaMainWindow.h  QSofaScene.h
applications/projects/runSofa/: Main.cpp
applications/sofa/gui/: BaseViewer.cpp  GUIManager.cpp
applications/sofa/gui/qt/: CMakeLists.txt  GUI.ui  MouseManager.ui  RealGUI.cpp  RealGUI.h  instructions.cpp  instructions.h  instructions.ui  report.cpp  report.h  report.ui  report_score.cpp  report_score.h  report_score.ui  surflablogin.cpp  surflablogin.h
applications/sofa/gui/qt/viewer/qt/: QtViewer.cpp  QtViewer.h
examples/: SSSExample.scn
examples/Components/visualmodel/: OglShadowShader_SpotLight.scn  OglShadowShader_SpotLight2.scn
modules/SofaConstraint/: BilateralInteractionConstraint.h  BilateralInteractionConstraint.inl
modules/SofaGeneralSimpleFem/: HexahedralFEMForceField.h  HexahedralFEMForceField.inl
modules/SofaOpenglVisual/src/SofaOpenglVisual/: OglModel.cpp  OglModel.h  OglShader.cpp  OglShadowShader.cpp  OglTexture.cpp
scripts/: Modeler.sh  copy-rest-of-dlls.bat  runSofa.sh  sofa-installer.nsi
share/: changeInstrumentController.lua  changeInstrumentController.py
share/shaders/: phong.vert  tessellationPNTriangle.glsl
share/shaders/TIPSShaders/: instrument.glsl  organShader.glsl  tessellationPNQuads_material.glsl  tessellationPNQuads_new.glsl  tessellationPNQuads_tex2d.glsl  tessellationPNTriangle_material.glsl  texture2d.glsl  texture3d.glsl
share/shaders/softShadows/VSM/: blur_texture.frag  blur_texture.vert  generate_depth_texture.frag
